# trackshape-utils

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  tox.ini
examples/: change_nrembrails_to_atracksrails.py  compress_shapes.py  convert_db1s_to_db1fb.py  convert_db1z1t_to_v4hsrkl1t.py  decompress_shapes.py  make_monon2_shapes.py  make_ohw_dblslip7_5d.py
examples/data/: DB1s_a2t500r20d.s  DB1s_a2t500r20d.sd  DB1z_a1t10mStrt.s  DB1z_a1t10mStrt.sd  DB1z_a1t150r10d.s  DB1z_a1t150r10d.sd  NR_EmbBase_a1t10mStrt.s  NR_EmbBase_a1t10mStrt.sd  NR_Emb_a1t250r10d.sd  NR_Emb_a2dt1000r1d.s  NR_Emb_a2dt1000r1d.sd  NR_Emb_a2t1000r1d.s  NR_Emb_a2t1000r1d.sd  NR_Emb_a3t1000r1d.s  NR_Emb_a3t1000r1d.sd  NR_Emb_a4t1000r1d.s  NR_Emb_a4t1000r1d.sd  NR_RWall_a1t10mStrt_lft.s  NR_RWall_a1t10mStrt_lft.sd  NR_Ramp_a1t10mStrt.s  NR_Ramp_a1t10mStrt.sd  NR_WallEmb_a1t10mStrt_lft.s  NR_WallEmb_a1t10mStrt_lft.sd
examples/data/processed/DB1fb/: DB1fb_a2t500r20d.s  DB1fb_a2t500r20d.sd
examples/data/processed/NREmbAtracksRails/: NR_EmbBase_AT_a1t10mStrt.s  NR_Emb_AT_a1t10mStrt.s  (+22 more)
examples/images/: NR_Emb_AT.xcf  V4hs1t_RKL_Curve.xcf
images/: Trackcenters.xcf  V4hs1t_RKL.xcf
tests/: conftest.py  test_file.py  test_shapefile.py  test_shapefile_compression.py  test_trackcenter.py  test_trackshapeutils.py  test_tsection.py  test_tsu.py
tests/data/: DK10f_A1tPnt5dLft.s  DK10f_A1tPnt5dLft.sd  DK10f_A1tPnt5dLft_changed.s  DK10f_A1tPnt5dLft_changed.sd  DK10f_A1tPnt5dLft_compressed.s  DK10f_A1tPnt5dLft_copied.sd
trackshapeutils/: __init__.py  trackshapeutils.py
(+4 files in other folders)
