[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trackshapeutils"
version = "0.2.0"
description = "Collection of experimental utilities to modify existing MSTS/ORTS track shapes."
readme = "README.md"
authors = [{name = "Peter Grønbæk Andersen", email = "peter@grnbk.io"}]
license = {text = "GNU GPL v3"}
dependencies = []

[project.urls]
Homepage = "https://github.com/pgroenbaek/trackshape-utils"